# VardrRunner

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
changelog/: README.md  v0.18.0.md  v0.19.0.md  v0.20.0.md  v0.20.1.md  v0.21.0.md  v0.21.1.md  v0.22.0.md  v0.22.1.md
docs/: architecture.md  cli.md  development.md
docs/adr/: 0000-template.md  0001-extract-vardrrunner-from-vardrmap.md  0002-tool-handler-registry.md  0003-distribution-and-release.md  0004-credential-storage.md  0005-run-scoped-pipelines.md  README.md
tests/: test_api.py  test_auth_commands.py  test_cli.py  test_config.py  test_configs.py  test_credentials.py  test_daemon.py  test_doctor.py  test_handlers.py  test_heartbeat.py  test_imports.py  test_job_events.py  test_jobs.py  test_keychain.py  test_nmap.py  test_pipeline.py  test_pipelines.py  test_programs.py  test_run_commands.py  test_runner.py  test_status.py
vardrrunner/: __init__.py  api.py  cli.py  config.py  configs.py  handlers.py  keychain.py  pipelines.py  runner.py  targets.py
vardrrunner/commands/: auth.py  daemon.py  doctor.py  heartbeat.py  imports.py  jobs.py  pipeline.py  programs.py  run.py  status.py
