[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vardrrunner"
version = "0.1.0"
description = "Local automation runner for the VardrSec product family"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.31",
]

[project.scripts]
vardrrunner = "vardrrunner.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["vardrrunner*"]
