[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vardrrunner"
dynamic = ["version"]
description = "Local automation runner for the VardrSec product family"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests>=2.31",
]

[project.scripts]
vardrrunner = "vardrrunner.cli:app"

# Single source of truth for the version: read the literal from the package.
[tool.setuptools.dynamic]
version = { attr = "vardrrunner.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["vardrrunner*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, B bugbear, UP pyupgrade.
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    # Long lines are left to the formatter; do not fail lint on E501.
    "E501",
    # B008: function call in argument default. This is the required Typer idiom
    # (`typer.Option(...)` / `typer.Argument(...)` as defaults) — not a bug here.
    "B008",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
# Pragmatic baseline — not strict mode. Tighten incrementally over time.

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
