[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vardrrunner"
dynamic = ["version"]
description = "Local automation runner for the VardrSec product family"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Jorge Aquino" }]
keywords = ["security", "bug-bounty", "recon", "automation", "cli", "vardrsec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.31",
    "keyring>=24",
]

[project.urls]
Homepage = "https://github.com/jorge-aquino/VardrRunner"
Repository = "https://github.com/jorge-aquino/VardrRunner"
Changelog = "https://github.com/jorge-aquino/VardrRunner/blob/main/CHANGELOG.md"
Issues = "https://github.com/jorge-aquino/VardrRunner/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests>=2.31",
    "bandit>=1.7",
]

[project.scripts]
vardrrunner = "vardrrunner.cli:app"

# Single source of truth for the version: read the literal from the package.
[tool.setuptools.dynamic]
version = { attr = "vardrrunner.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["vardrrunner*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, B bugbear, UP pyupgrade.
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    # Long lines are left to the formatter; do not fail lint on E501.
    "E501",
    # B008: function call in argument default. This is the required Typer idiom
    # (`typer.Option(...)` / `typer.Argument(...)` as defaults) — not a bug here.
    "B008",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# warn_unused_ignores is intentionally OFF: Windows-only `# type: ignore`s (ctypes.windll,
# DETACHED_PROCESS) are needed when CI type-checks on Linux but unused on Windows.
# Pragmatic baseline — not strict mode. Tighten incrementally over time.

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
